--- a/html-css/exercícios/ex002/estilos/style.css
+++ b/html-css/exercícios/ex002/estilos/style.css
@@ -1,4 +1,16 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', sans-serif;
+    --fonte3: 'Sriracha', cursive;
+}
+
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -18,6 +30,8 @@ header {
 header > h1 {
     padding-top: 40px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -40,6 +54,8 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-size: 3.5vw;
+    font-family: var(--fonte3);
     
 }
 
@@ -54,7 +70,8 @@ section {
 }
 
 .imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.205);
 }
 
