--- a/html-css/exercícios/ex002/estilos/style.css
+++ b/html-css/exercícios/ex002/estilos/style.css
@@ -31,7 +31,7 @@ header > h1 {
     padding-top: 40px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 10vw;
+    font-size: 8.5vw;
 }
 
 header > p {
@@ -54,9 +54,13 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
-    font-size: 3.5vw;
+    font-size: 3vw;
     font-family: var(--fonte3);
     
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 .normal {
@@ -66,13 +70,29 @@ section {
 
 .imagem {
     background-color: rgb(61, 60, 60);
+    box-shadow: inset 6px 13px 13px rgba(0, 0, 0, 0.452);
     color: white;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.205);
+    text-shadow: 1px 1px 0px black;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    
+}
+
+#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    
 }
 
 footer {
